<resources>
    <string name="app_name">Paron</string>
    <string name="title_activity_splash">Paron</string>

    <!-- Text for 1st intro slide -->
    <string name="first_intro_text">
      <![CDATA[
      <p><font face="Avenir-Roman" color="#7c7c7b" letter-spacing: 0.33dp>Päron är din föräldracoach i fickformat som ger dig experttips kring föräldraskap</font></p>
      <br>
      <p><font face="Avenir-Roman" color="#7c7c7b" letter-spacing: 0.33dp>För åldrarna 3-9</font></p>
      ]]>
    </string>

    <string name="btn_create_acc">SKAPA NYTT KONTO</string>
    <string name="login_text">
    Jag har redan ett konto! Logga in
    </string>

    <!-- Text for 2nd intro slide -->
    <string name="second_intro_text">
      <![CDATA[
      <p><font face="Avenir-Roman" color="#7c7c7b" letter-spacing: 0.33dp>Tipsen baseras på kunskapen om
<strong>social</strong> och <strong>emotionell intelligens</strong>
samt <strong>utvecklingspsykologi.</strong></font></p>
      <br>
      <p><font face="Avenir-Roman" color="#7c7c7b" letter-spacing: 0.33dp> Detta för att <strong>stärka relationen</strong> mellan dig och ditt barn. </font></p>
      ]]>
    </string>

    <!-- Text for 3rd intro slide -->
    <string name="third_intro_text">
      <![CDATA[
      <p><font face="Avenir-Roman" color="#7c7c7b" letter-spacing: 0.33dp><strong>Visste du att “föräldraskap” är  bland det mest sökta ämnet på internet?</strong></font></p>
            <p><font face="Avenir-Roman" color="#7c7c7b" letter-spacing: 0.33dp>I Päron har vi gjort det enkelt
för dig genom att sammanfatta
och förenkla råden till de mest sökta
frågorna kring föräldraskap.</font></p>

      ]]>
    </string>

    <string name="btn_start">KOM IGÅNG NU</string>
    <string name="title_activity_login">LoginActivity</string>

    <!-- Text for 3rd intro slide -->
    <string name="login_page_text">
      <![CDATA[

       <p><font face="Avenir-Black" color="#7c7c7b" letter-spacing: 2.53dp><strong>ELLER REGISTRERA MED EMAIL</strong></font></p>

      ]]>
    </string>

    <!-- Text for account register page -->
    <string name="create_with_gmail">SKAPA MED GMAIL</string>
    <string name="firstname_placeholder">FÖRNAMN</string>
    <string name="eftername_placeholder">EFTERNAMN</string>
    <string name="email_placeholder">EMAIL</string>
    <string name="password_placeholder">LÖSENORD</string>
    <string name="btn_register">REGISTERA</string>
    <string name="title_activity_info">infoActivity</string>

    <string name="facebook_app_id">225973424634472</string>
    <string name="fb_login_protocol_scheme">fb225973424634472</string>
    <string name="title_activity_email_login">EmailLoginActivity</string>

    <!-- Text for email log in page -->
    <string name="login_email_placehold">EMAIL</string>

    <string name="login_password_placehold">LÖSENORD</string>

    <string name="login_forgotPW"><![CDATA[

       <p><font face="Avenir-Heavy" color="#7c7c7b" letter-spacing: 0.1dp>Glömt lösenordet?</font></p>

      ]]></string>

    <string name="login_loggain">LOGGA IN</string>

    <string name="login_eller"><![CDATA[

       <p><font face="Avenir-Heavy" color="#7c7c7b" letter-spacing: 0.1dp>Eller</font></p>

      ]]></string>

    <string name="login_register_text">Har du inget konto? Registera här</string>

    <string name="login_facebook">LAGGA IN MED FACEBOOK</string>

    <string name="login_gmail">LAGGA IN MED GMAIL</string>
    <string name="title_activity_important_info">importantInfoActivity</string>
    <string name="importantInfo"><![CDATA[

       <p><font face="Avenir-Roman" color="#7c7c7b" letter-spacing: 0.1dp><span style="text-decoration-color: #f3a194;">VIKTIGT! </span>Päron är ett icke-medicinsk verktyg och ska ses som en samlingsplats för information. Det erbjuder <strong>inte</strong> individuella råd om mental hälsa och inte heller råd kring barn med särskilda behov.
<br><br>
Informationen ges för allmän användning och bör <strong>inte</strong> ses som tillämplig på någon enskild situation. Vi gör allt för att säkerställa innehållets kvalitet men vi tar inte ansvar för hur enskilda personer använder innehållet.</font></p>

      ]]></string>

    <string name="understand_btn">JAG FÖRSTÅR</string>
    <string name="title_activity_forgot_pw">ForgotPWActivity</string>

    <string name="forgotPWInfo"><![CDATA[

       <p><font face="Avenir-Black" color="#8b8b8b" letter-spacing: 0.1dp>Glömt lösenordet?</span></font></p>

      ]]></string>

    <string name="enterEmailInfo"><![CDATA[

       <p><font face="Avenir-Roman" color="#8b8b8b" letter-spacing: 0.1dp>Ange din e-postadress så skickar vi en länk för att skapa nytt lösenord</span></font></p>

      ]]></string>
    <string name="send_newPW_btn">SKICKA NYTT LÖSENORD</string>
    <string name="cancel_btn">AVBRYT</string>
    <string name="title_activity_email_sent">emailSentActivity</string>
    <string name="email_sent">Nuså!</string>
    <string name="email_sent_info">Vi har skickat instruktioner om hur du kan skapa nytt lösenord till din angivna epostadress!</string>
    <string name="title__welcome">VÄLKOMMEN!</string>
    <string name="info_welcome">Lägg till dina barn för att få anpassade råd!</string>
    <string name="kids_name">Mitt barn heter</string>
    <string name="kids_name_info">Detta visas bara för dig</string>
    <string name="birthday_info">Födelsedatum</string>
    <string name="title_activity_category">categoryActivity</string>
    <string name="related_tips"><![CDATA[
       <p><font face="Avenir-Roman" color="#8b8b8b" letter-spacing: 0.1dp><strong>Vilka ämnen vill du veta mer om?</strong>
    Välj minst tre för att få relevanta tips</span></font></p>
      ]]></string>
    <string name="title_activity_welcome">welcomeActivity</string>
    <string name="done_btn">Klar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_kid_Text">Lägg till dina barn</string>
    <string name="add_kid">Lägg till barn</string>
    <string name="next_btn">Nästa</string>
    <string name="kid_name_title">Mitt barn heter</string>
    <string name="kid_name_info">Detta visas bara för dig</string>
    <string name="kid_name_placeholder">Skriv namn</string>">
    <string name="kid_name_Btn">Steg 2/3</string>
    <string name="birthday_Text">Födelsedatum</string>
    <string name="title_activity_main_tabs">MainTabsActivity</string>
    <string name="title_activity_start_here">StartHereActivity</string>
    <string name="welcome_title">VÄLKOMMEN!</string>
    <string name="welcome_text">Lägg till dina barn för att få anpassade råd!</string>
    <string name="welcome_btn">LÄGG TILL BARN</string>
    <string name="daily_title">Dagens fråga</string>
    <string name="daily_btn">Läs mera</string>
    <string name="recommend_text">Rekommenderat för dig</string>
    <string name="doYouKnow_text">Visste du att</string>
    <string name="tips_text">Tipsa dina vänner</string>
    <string name="title_activity_home_advice">HomeAdviceActivity</string>
    <string name="seemore_btn">SE FLER SVAR</string>
    <string name="extra_tough">Känns föräldraskapet extra tufft?</string>
    <string name="extra_details">Vi vet att föräldrarollen kan upplevas som  utmanande i vissa perioder. Vi vill erbjuda dig den hjälp du behöver i just den stunden.  Här nedan kan du komma i kontakt med våra proffs och få den hjälp du behöver direkt.  Du kan chatta, maila eller ringa!</string>
    <string name="extra_details_Info"><![CDATA[

       <p><font face="Avenir-Roman" color="#8b8b8b" letter-spacing: 0.1dp>Vi vet att föräldrarollen kan upplevas som
utmanande i vissa perioder. Vi vill erbjuda
dig den hjälp du behöver i just den stunden.</span></font></p>
<br>


       <p><font face="Avenir-Roman" color="#8b8b8b" letter-spacing: 0.1dp>Här nedan kan du komma i kontakt med våra
proffs och få den hjälp du behöver direkt.</span></font></p>
<br>

       <p><font face="Avenir-Roman" color="#8b8b8b" letter-spacing: 0.1dp>Du kan chatta, maila eller ringa!</span></font></p>
<br>



      ]]></string>
    <string name="not_found">Hittar ni inte de svaren  ni var ute efter?</string>
    <string name="not_found_details">Skriv till oss berätta vad ni saknar så kan vi se till att du hittar rätt nästa gång!</string>
    <string name="write_us">Skriv till oss</string>
    <string name="personal_text">Vill du ha personliga och anpassade tips från proffsen?</string>
    <string name="personal_text1">Du har möjlighet att ta kontakt med våra proffs för att få extra stöd inom föräldraskap.</string>
    <string name="personaltext2">Ta kontakt via telefon, mail eller chat och vi svarar samma dag eller inom 48 timmar!</string>
    <string name="to_expert">Till Proffsen</string>
    <string name="title_activity_chat_section">ChatSectionActivity</string>
    <string name="bocka_chatt">Boka en Chatt</string>
    <string name="next">Nästa</string>

    <!-- Text for nochat page -->
    <string name="no_chat">
      <![CDATA[
 <p><font face="Avenir-Roman" color="#7c7c7b" letter-spacing: 0.33dp>Du kan prova att chatta helt grattis med våra experter i 15 minuter. Du kan alltid återkomma till denna person för längre sessioner. </font></p>

      ]]>
    </string>

    <!-- Text for chat declaim -->


    <string name="chat_declaim1">
      <![CDATA[
      <p><font face="Avenir-Roman" color="#7c7c7b" letter-spacing: 0.33dp>Päron erbjuder möte med psykolog eller pedagog där vi kan hjälpa dig med att
bättre förstå dina problem, samt ge råd
och stöd i ditt föräldrarskap. </font></p>
<br>
 <p><font face="Avenir-Roman" color="#7c7c7b" letter-spacing: 0.33dp>Våra psykologer och pedagoger ger råd kring frågor som rör barns psykologiska
och emotionella utveckling. </font></p>

      ]]>
    </string>

    <string name="chat_declaim2">
      <![CDATA[

      <p><font face="Avenir-Roman" color="#7c7c7b" letter-spacing: 0.33dp>Våra psykologer kan inte hjälpa dig med frågor som rör medicinering, diagnostisering eller akuta tillstånd. Om du vill ha hjälp med det så ska du vända dig till en läkare eller närmsta akutmottagning.  </font></p>

      ]]>
    </string>
    <string name="declaim_title1">Vad vi kan hjälpa dig med</string>
    <string name="declaim_title2">När vi inte kan hjälpa till</string>
    <string name="no_chat_title">Inga chattar ännu!</string>
    <string name="start_chat">Börja chatta!</string>
    <string name="no_chat_text">Du kan prova att chatta helt gratis med våra experter i 15 minuter. Du kan alltid återkomma till denna person för längre sessioner.</string>
    <string name="with_whom">Med vem vill du chatta med?</string>
    <string name="psy_text">Med en våra psykologer kan du prata om exempel1, exempel2, exempel3,</string>
    <string name="psy_title">Psykolog</string>
    <string name="pedagog_title">Pedagog</string>
    <string name="pedagog_text">Med en våra pedagoger kan du prata om exempel1, exempel2, exempel3,</string>
    <string name="choose_price"><![CDATA[Välj tid & pris]]></string>
    <string name="option1">15 min / 30kr</string>
    <string name="option2">30 min / 50kr</string>
    <string name="option3">45 min / 70kr</string>
    <string name="time_fit">Välj en tid som passar dig</string>
    <string name="choose_time">Välj en tid</string>
    <string name="option2p">30 min / 30kr</string>
    <string name="option1p">15 min / 15kr</string>
    <string name="option3p">45 min / 45kr</string>
    <string name="title_activity_klarna">KlarnaActivity</string>
    <string name="title_activity_payment">PaymentActivity</string>


</resources>
