<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/slide_bg"
    android:id="@+id/parent"
    tools:context="com.peppypals.paronbeta.EnterKidInfo.EnterKidNameFragment">


    <View
        android:id="@+id/imageView11"
        android:layout_width="384dp"
        android:layout_height="205dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nameTitle"
        android:layout_width="170dp"
        android:layout_height="27dp"
        android:layout_marginTop="19dp"
        android:text="@string/kid_name_title"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView11" />

    <TextView
        android:id="@+id/name_text"
        android:layout_width="141dp"
        android:layout_height="21dp"
        android:layout_marginTop="7dp"
        android:text="@string/kids_name_info"
        android:textAlignment="center"
        android:textSize="10sp"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameTitle" />

    <EditText
        android:id="@+id/kidNameInput"
        android:layout_width="282dp"
        android:layout_height="127dp"
        android:layout_marginTop="8dp"
        android:background="@color/slide_bg"
        android:ems="10"
        android:hint="@string/kid_name_placeholder"
        android:layout_centerInParent="true"
        android:ellipsize="start"
        android:inputType="textCapWords|textPersonName"
        android:textColor="@color/com_facebook_button_background_color_disabled"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_text" />

    <Button
        android:id="@+id/nameDoneBtn"
        android:layout_width="286dp"
        android:layout_height="57dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/greenbar"
        android:text="@string/kid_name_Btn"
        android:textColor="@color/text_on_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


</android.support.constraint.ConstraintLayout>
