<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cloud_low_bg"
    tools:context="com.peppypals.paronbeta.ChatSection.StartChatFragment">

    <ImageView
        android:id="@+id/chatBar"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@color/chat_bar"
        android:textAlignment="center"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/chatTitle"
        android:layout_width="161dp"
        android:layout_height="22dp"
        android:text="@string/bocka_chatt"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/chatBar"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/chatBar"
        android:layout_marginBottom="8dp" />

    <ImageView
        android:id="@+id/imageView21"
        android:layout_width="0dp"
        android:layout_height="114dp"
        android:background="@color/cloud_bg"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chatBar"
        app:srcCompat="@drawable/topbg" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="253dp"
        android:layout_height="31dp"
        android:text="@string/no_chat_title"
        android:textAlignment="center"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="36dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView21" />

    <Button
        android:id="@+id/startChatBtn"
        android:layout_width="311dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/chatgreen"
        android:text="@string/start_chat"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/nochat"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/nochat" />

    <TextView
        android:id="@+id/nochat"
        android:layout_width="301dp"
        android:layout_height="93dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/no_chat_text"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/startChatBtn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.168"
        app:layout_constraintHorizontal_bias="0.507" />

</android.support.constraint.ConstraintLayout>
