<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/slide_bg"
    tools:context="com.peppypals.paronbeta.EmailSentActivity">


    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="267dp"
        android:layout_height="164dp"
        app:srcCompat="@drawable/sent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.282"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.24" />

    <TextView
        android:id="@+id/sentText"
        android:layout_width="182dp"
        android:layout_height="26dp"
        android:text="@string/email_sent"
        android:textAlignment="center"
        android:textColor="@color/text_bold"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="18dp"
        app:layout_constraintBottom_toTopOf="@+id/sentInfo" />

    <TextView
        android:id="@+id/sentInfo"
        android:layout_width="259dp"
        android:layout_height="71dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="0dp"
        android:text="@string/email_sent_info"
        android:textAlignment="center"
        android:textColor="@color/text_login"
        app:layout_constraintLeft_toLeftOf="@+id/sentText"
        app:layout_constraintRight_toRightOf="@+id/sentText"
        app:layout_constraintHorizontal_bias="0.545"
        android:layout_marginBottom="26dp"
        app:layout_constraintBottom_toTopOf="@+id/toLoginBtn" />

    <Button
        android:id="@+id/toLoginBtn"
        android:layout_width="300dp"
        android:layout_height="58dp"
        android:layout_marginBottom="47dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/greenbar"
        android:text="@string/login_loggain"
        android:textColor="@color/text_on_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.437"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteX="85dp" />
</android.support.constraint.ConstraintLayout>
