<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/slide_bg"
    android:gravity="center|center"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="352dp"
        android:layout_height="228dp"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="0dp"
        android:src="@drawable/group"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.204"
        tools:layout_editor_absoluteX="20dp" />

    <Button
        android:id="@+id/createAccBtn"
        android:layout_width="311dp"
        android:layout_height="51dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/rectangle"
        android:letterSpacing="0.1"
        android:text="@string/btn_create_acc"
        android:textColor="@color/text_on_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/loginText"
        android:layout_width="225dp"
        android:layout_height="27dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/login_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createAccBtn"
        app:layout_constraintVertical_bias="0.222" />

    <TextView
        android:id="@+id/intro2Text"
        android:layout_width="298dp"
        android:layout_height="117dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/first_intro_text"
        android:textAlignment="center"
        android:textColor="@color/text_on_btn"
        app:layout_constraintBottom_toTopOf="@+id/createAccBtn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.516" />


</android.support.constraint.ConstraintLayout>
