<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/slide_bg"
    android:gravity="center|center"
    android:orientation="vertical"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">


    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="292dp"
        android:layout_height="186dp"
        android:src="@drawable/page_1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/loginText"
        android:layout_marginBottom="8dp"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintVertical_bias="0.19999999"
        tools:layout_editor_absoluteY="53dp" />

    <Button
        android:id="@+id/startBtn"
        android:layout_width="311dp"
        android:layout_height="51dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/rectangle"
        android:letterSpacing="0.1"
        android:text="@string/btn_start"
        android:textColor="@color/text_on_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/loginText"
        android:layout_width="207dp"
        android:layout_height="23dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/login_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createAccBtn"
        app:layout_constraintVertical_bias="0.222"
        app:layout_constraintHorizontal_bias="0.501" />

    <TextView
        android:id="@+id/intro3Text"
        android:layout_width="298dp"
        android:layout_height="117dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/first_intro_text"
        android:textAlignment="center"
        android:textColor="@color/text_on_btn"
        app:layout_constraintBottom_toTopOf="@+id/startBtn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintVertical_bias="0.846" />



</android.support.constraint.ConstraintLayout>
