<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.peppypals.paronbeta.StartHere.StartHomeFragment">


    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="383dp"
        android:layout_height="527dp"
        android:background="@drawable/startbg"
        android:textAlignment="center"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="221dp"
        android:layout_height="210dp"
        app:srcCompat="@drawable/startimg"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        android:layout_marginBottom="90dp"
        app:layout_constraintBottom_toTopOf="@+id/startBtn" />

    <TextView
        android:id="@+id/welcomeTitle"
        android:layout_width="190dp"
        android:layout_height="21dp"
        android:layout_marginTop="32dp"
        android:text="@string/welcome_title"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="210dp"
        android:layout_height="36dp"
        android:text="@string/welcome_text"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="23dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView13"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/welcomeTitle"
        app:layout_constraintVertical_bias="0.821" />

    <Button
        android:id="@+id/startBtn"
        android:layout_width="301dp"
        android:layout_height="40dp"
        android:layout_marginBottom="31dp"
        android:background="@drawable/bluerounded"
        android:text="@string/welcome_btn"
        android:textColor="?android:attr/textColorSecondary"
        app:layout_constraintBottom_toBottomOf="@+id/imageView12"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.506" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="103dp"
        android:layout_height="59dp"
        app:srcCompat="@drawable/start"
        android:layout_marginRight="17dp"
        app:layout_constraintRight_toRightOf="@+id/startBtn"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toTopOf="@+id/startBtn" />
</android.support.constraint.ConstraintLayout>
